UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_Offer_Template__c.object
<CustomObject>
    <fields>
        <fullName>Is_WAC_General_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is WAC General Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phoenix_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offer Templates</relationshipLabel>
        <relationshipName>Offer_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Related_To__c</fullName>
        <label>Related To</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bid Template</fullName>
                </value>
                <value>
                    <fullName>NDC Change</fullName>
                </value>
                <value>
                    <fullName>WAC Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_VF_Page_Name__c</fullName>
        <label>VF Page Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Offer Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Account__c</columns>
        <columns>Phoenix_VF_Page_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Phoenix_Related_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>